#SPLUNK-120, adding a bit top margin for the question tags container. This should fix the issue with the tags overlapping the scrollbar.
git-svn-id: http://svn.osqa.net/svnroot/osqa/trunk@911 0cfe37f9-358a-4d5e-be75-b63607b5c754

--- a/forum/skins/default/media/style/style.css
+++ b/forum/skins/default/media/style/style.css
@@ -1318,6 +1318,10 @@ ul.form-horizontal-rows li input {
     margin: 0 0 16px 0;
 }
 
+#question-tags {
+    margin-top: 15px;
+}
+
 .post-controls {
     float: left;
 }
